--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     // Lifecycles only (without ViewModel or LiveData)
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
-    implementation 'androidx.fragment:fragment:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-process:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-service:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0'
